# audio-forge

./: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
.github/workflows/: build-and-deploy.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  web.rs
