[package]
name = "audio-forge"
version = "1.0.0"
edition = "2021"
default-run = "audio-forge"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tauri (desktop)
tauri = { version = "2", features = [], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }

# Web server
axum = { version = "0.8", features = ["multipart"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.6", features = ["cors", "fs"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
tempfile = { version = "3", optional = true }

[features]
default = ["desktop"]
desktop = ["dep:tauri", "dep:tauri-plugin-dialog", "dep:tauri-plugin-shell"]
web = ["dep:axum", "dep:tokio", "dep:tower-http", "dep:uuid", "dep:tempfile"]

[[bin]]
name = "audio-forge"
path = "src/main.rs"
required-features = ["desktop"]

[[bin]]
name = "audio-forge-web"
path = "src/web.rs"
required-features = ["web"]

[profile.release]
strip = true
lto = true
codegen-units = 1
